// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renderes large 1`] = `
.c0 {
  font-family: 'proxima-nova',sans-serif,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #1a1a1a;
  font-size: 2em;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

<span
  className="c0"
  large={true}
  theme={
    Object {
      "atoms": Object {
        "Alert": Object {
          "default": Object {
            "background": "#f8f8f8",
            "borderColor": "#aaaaaa",
            "color": "#000",
          },
          "error": Object {
            "background": "#c7254e",
            "borderColor": "#861935",
            "color": "#fff",
          },
          "success": Object {
            "background": "#38bd93",
            "borderColor": "#278265",
            "color": "#fff",
          },
          "warning": Object {
            "background": "#d4ab27",
            "borderColor": "#93771b",
            "color": "#fff",
          },
        },
        "Button": Object {
          "danger": Object {
            "background": "#ff0000",
            "color": "#fff",
            "hoverBackground": "#b30000",
            "hoverColor": "#fff",
          },
          "default": Object {
            "background": "#fff",
            "color": "#000",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#3c3c5b",
          },
          "disabled": Object {
            "background": "#f8f8f8",
            "color": "#aaaaaa",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#aaaaaa",
          },
          "primary": Object {
            "background": "#00bcd4",
            "color": "#fff",
            "hoverBackground": "#007888",
            "hoverColor": "#fff",
          },
        },
      },
      "borderRadius": "4px",
      "boxShadow": Object {
        "heavy": "0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)",
        "light": "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)",
        "none": "none",
        "selected": "0px 0px 2px 2px #8383ac",
      },
      "colors": Object {
        "accent": Object {
          "blue": "#00d2ff",
          "orange": "#ff4b19",
        },
        "athens": "#e2e2ec",
        "black": "#000",
        "danger": "#ff0000",
        "gray": "#aaaaaa",
        "gunpowder": "#3c3c5b",
        "lavender": "#8383ac",
        "lightgray": "#f8f8f8",
        "neutral": Object {
          "black": "#1a1a1a",
          "gray": "#9a9a9a",
          "lightgray": "#c1c1c1",
          "white": "#fff",
        },
        "primary": Object {
          "charcoal": "#32324b",
          "lavender": "#8383ac",
        },
        "sand": "#f5f4f4",
        "status": Object {
          "disabled": "#9a9a9a",
          "error": "#c7254e",
          "info": "#049cd7",
          "success": "#38bd93",
          "warning": "#d4ab27",
        },
        "stratos": "#001755",
        "turquoise": "#00bcd4",
        "weaveblue": "#00D2FF",
        "white": "#fff",
      },
      "fontFamily": "'proxima-nova', sans-serif, 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontSizes": Object {
        "large": "2em",
        "normal": "16px",
        "xl": "2.827em",
      },
      "textColor": "#1a1a1a",
    }
  }
/>
`;

exports[`<Text /> renders bold 1`] = `
.c0 {
  font-family: 'proxima-nova',sans-serif,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #1a1a1a;
  font-size: 16px;
  font-weight: 400;
  text-transform: none;
  font-style: italic;
}

<span
  className="c0"
  italic={true}
  theme={
    Object {
      "atoms": Object {
        "Alert": Object {
          "default": Object {
            "background": "#f8f8f8",
            "borderColor": "#aaaaaa",
            "color": "#000",
          },
          "error": Object {
            "background": "#c7254e",
            "borderColor": "#861935",
            "color": "#fff",
          },
          "success": Object {
            "background": "#38bd93",
            "borderColor": "#278265",
            "color": "#fff",
          },
          "warning": Object {
            "background": "#d4ab27",
            "borderColor": "#93771b",
            "color": "#fff",
          },
        },
        "Button": Object {
          "danger": Object {
            "background": "#ff0000",
            "color": "#fff",
            "hoverBackground": "#b30000",
            "hoverColor": "#fff",
          },
          "default": Object {
            "background": "#fff",
            "color": "#000",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#3c3c5b",
          },
          "disabled": Object {
            "background": "#f8f8f8",
            "color": "#aaaaaa",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#aaaaaa",
          },
          "primary": Object {
            "background": "#00bcd4",
            "color": "#fff",
            "hoverBackground": "#007888",
            "hoverColor": "#fff",
          },
        },
      },
      "borderRadius": "4px",
      "boxShadow": Object {
        "heavy": "0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)",
        "light": "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)",
        "none": "none",
        "selected": "0px 0px 2px 2px #8383ac",
      },
      "colors": Object {
        "accent": Object {
          "blue": "#00d2ff",
          "orange": "#ff4b19",
        },
        "athens": "#e2e2ec",
        "black": "#000",
        "danger": "#ff0000",
        "gray": "#aaaaaa",
        "gunpowder": "#3c3c5b",
        "lavender": "#8383ac",
        "lightgray": "#f8f8f8",
        "neutral": Object {
          "black": "#1a1a1a",
          "gray": "#9a9a9a",
          "lightgray": "#c1c1c1",
          "white": "#fff",
        },
        "primary": Object {
          "charcoal": "#32324b",
          "lavender": "#8383ac",
        },
        "sand": "#f5f4f4",
        "status": Object {
          "disabled": "#9a9a9a",
          "error": "#c7254e",
          "info": "#049cd7",
          "success": "#38bd93",
          "warning": "#d4ab27",
        },
        "stratos": "#001755",
        "turquoise": "#00bcd4",
        "weaveblue": "#00D2FF",
        "white": "#fff",
      },
      "fontFamily": "'proxima-nova', sans-serif, 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontSizes": Object {
        "large": "2em",
        "normal": "16px",
        "xl": "2.827em",
      },
      "textColor": "#1a1a1a",
    }
  }
/>
`;

exports[`<Text /> renders default 1`] = `
.c0 {
  font-family: 'proxima-nova',sans-serif,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #1a1a1a;
  font-size: 16px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

<span
  className="c0"
  theme={
    Object {
      "atoms": Object {
        "Alert": Object {
          "default": Object {
            "background": "#f8f8f8",
            "borderColor": "#aaaaaa",
            "color": "#000",
          },
          "error": Object {
            "background": "#c7254e",
            "borderColor": "#861935",
            "color": "#fff",
          },
          "success": Object {
            "background": "#38bd93",
            "borderColor": "#278265",
            "color": "#fff",
          },
          "warning": Object {
            "background": "#d4ab27",
            "borderColor": "#93771b",
            "color": "#fff",
          },
        },
        "Button": Object {
          "danger": Object {
            "background": "#ff0000",
            "color": "#fff",
            "hoverBackground": "#b30000",
            "hoverColor": "#fff",
          },
          "default": Object {
            "background": "#fff",
            "color": "#000",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#3c3c5b",
          },
          "disabled": Object {
            "background": "#f8f8f8",
            "color": "#aaaaaa",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#aaaaaa",
          },
          "primary": Object {
            "background": "#00bcd4",
            "color": "#fff",
            "hoverBackground": "#007888",
            "hoverColor": "#fff",
          },
        },
      },
      "borderRadius": "4px",
      "boxShadow": Object {
        "heavy": "0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)",
        "light": "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)",
        "none": "none",
        "selected": "0px 0px 2px 2px #8383ac",
      },
      "colors": Object {
        "accent": Object {
          "blue": "#00d2ff",
          "orange": "#ff4b19",
        },
        "athens": "#e2e2ec",
        "black": "#000",
        "danger": "#ff0000",
        "gray": "#aaaaaa",
        "gunpowder": "#3c3c5b",
        "lavender": "#8383ac",
        "lightgray": "#f8f8f8",
        "neutral": Object {
          "black": "#1a1a1a",
          "gray": "#9a9a9a",
          "lightgray": "#c1c1c1",
          "white": "#fff",
        },
        "primary": Object {
          "charcoal": "#32324b",
          "lavender": "#8383ac",
        },
        "sand": "#f5f4f4",
        "status": Object {
          "disabled": "#9a9a9a",
          "error": "#c7254e",
          "info": "#049cd7",
          "success": "#38bd93",
          "warning": "#d4ab27",
        },
        "stratos": "#001755",
        "turquoise": "#00bcd4",
        "weaveblue": "#00D2FF",
        "white": "#fff",
      },
      "fontFamily": "'proxima-nova', sans-serif, 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontSizes": Object {
        "large": "2em",
        "normal": "16px",
        "xl": "2.827em",
      },
      "textColor": "#1a1a1a",
    }
  }
/>
`;

exports[`<Text /> renders italic 1`] = `
.c0 {
  font-family: 'proxima-nova',sans-serif,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #1a1a1a;
  font-size: 2em;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

<span
  className="c0"
  large={true}
  theme={
    Object {
      "atoms": Object {
        "Alert": Object {
          "default": Object {
            "background": "#f8f8f8",
            "borderColor": "#aaaaaa",
            "color": "#000",
          },
          "error": Object {
            "background": "#c7254e",
            "borderColor": "#861935",
            "color": "#fff",
          },
          "success": Object {
            "background": "#38bd93",
            "borderColor": "#278265",
            "color": "#fff",
          },
          "warning": Object {
            "background": "#d4ab27",
            "borderColor": "#93771b",
            "color": "#fff",
          },
        },
        "Button": Object {
          "danger": Object {
            "background": "#ff0000",
            "color": "#fff",
            "hoverBackground": "#b30000",
            "hoverColor": "#fff",
          },
          "default": Object {
            "background": "#fff",
            "color": "#000",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#3c3c5b",
          },
          "disabled": Object {
            "background": "#f8f8f8",
            "color": "#aaaaaa",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#aaaaaa",
          },
          "primary": Object {
            "background": "#00bcd4",
            "color": "#fff",
            "hoverBackground": "#007888",
            "hoverColor": "#fff",
          },
        },
      },
      "borderRadius": "4px",
      "boxShadow": Object {
        "heavy": "0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)",
        "light": "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)",
        "none": "none",
        "selected": "0px 0px 2px 2px #8383ac",
      },
      "colors": Object {
        "accent": Object {
          "blue": "#00d2ff",
          "orange": "#ff4b19",
        },
        "athens": "#e2e2ec",
        "black": "#000",
        "danger": "#ff0000",
        "gray": "#aaaaaa",
        "gunpowder": "#3c3c5b",
        "lavender": "#8383ac",
        "lightgray": "#f8f8f8",
        "neutral": Object {
          "black": "#1a1a1a",
          "gray": "#9a9a9a",
          "lightgray": "#c1c1c1",
          "white": "#fff",
        },
        "primary": Object {
          "charcoal": "#32324b",
          "lavender": "#8383ac",
        },
        "sand": "#f5f4f4",
        "status": Object {
          "disabled": "#9a9a9a",
          "error": "#c7254e",
          "info": "#049cd7",
          "success": "#38bd93",
          "warning": "#d4ab27",
        },
        "stratos": "#001755",
        "turquoise": "#00bcd4",
        "weaveblue": "#00D2FF",
        "white": "#fff",
      },
      "fontFamily": "'proxima-nova', sans-serif, 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontSizes": Object {
        "large": "2em",
        "normal": "16px",
        "xl": "2.827em",
      },
      "textColor": "#1a1a1a",
    }
  }
/>
`;

exports[`<Text /> renders xl 1`] = `
.c0 {
  font-family: 'proxima-nova',sans-serif,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #1a1a1a;
  font-size: 2.827em;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

<span
  className="c0"
  theme={
    Object {
      "atoms": Object {
        "Alert": Object {
          "default": Object {
            "background": "#f8f8f8",
            "borderColor": "#aaaaaa",
            "color": "#000",
          },
          "error": Object {
            "background": "#c7254e",
            "borderColor": "#861935",
            "color": "#fff",
          },
          "success": Object {
            "background": "#38bd93",
            "borderColor": "#278265",
            "color": "#fff",
          },
          "warning": Object {
            "background": "#d4ab27",
            "borderColor": "#93771b",
            "color": "#fff",
          },
        },
        "Button": Object {
          "danger": Object {
            "background": "#ff0000",
            "color": "#fff",
            "hoverBackground": "#b30000",
            "hoverColor": "#fff",
          },
          "default": Object {
            "background": "#fff",
            "color": "#000",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#3c3c5b",
          },
          "disabled": Object {
            "background": "#f8f8f8",
            "color": "#aaaaaa",
            "hoverBackground": "#f8f8f8",
            "hoverColor": "#aaaaaa",
          },
          "primary": Object {
            "background": "#00bcd4",
            "color": "#fff",
            "hoverBackground": "#007888",
            "hoverColor": "#fff",
          },
        },
      },
      "borderRadius": "4px",
      "boxShadow": Object {
        "heavy": "0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)",
        "light": "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)",
        "none": "none",
        "selected": "0px 0px 2px 2px #8383ac",
      },
      "colors": Object {
        "accent": Object {
          "blue": "#00d2ff",
          "orange": "#ff4b19",
        },
        "athens": "#e2e2ec",
        "black": "#000",
        "danger": "#ff0000",
        "gray": "#aaaaaa",
        "gunpowder": "#3c3c5b",
        "lavender": "#8383ac",
        "lightgray": "#f8f8f8",
        "neutral": Object {
          "black": "#1a1a1a",
          "gray": "#9a9a9a",
          "lightgray": "#c1c1c1",
          "white": "#fff",
        },
        "primary": Object {
          "charcoal": "#32324b",
          "lavender": "#8383ac",
        },
        "sand": "#f5f4f4",
        "status": Object {
          "disabled": "#9a9a9a",
          "error": "#c7254e",
          "info": "#049cd7",
          "success": "#38bd93",
          "warning": "#d4ab27",
        },
        "stratos": "#001755",
        "turquoise": "#00bcd4",
        "weaveblue": "#00D2FF",
        "white": "#fff",
      },
      "fontFamily": "'proxima-nova', sans-serif, 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontSizes": Object {
        "large": "2em",
        "normal": "16px",
        "xl": "2.827em",
      },
      "textColor": "#1a1a1a",
    }
  }
  xl={true}
/>
`;
